--- a/app/assets/stylesheets/techjob.css
+++ b/app/assets/stylesheets/techjob.css
@@ -33,8 +33,13 @@
 
 footer {
     /* Sticky footer */
-    position: fixed;
+    /* position: relative;
     bottom: 24px;
+    background-color: rgb(1, 22, 39); */
+    position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
 }
 
 small {
