--- a/app/assets/stylesheets/techjob.css
+++ b/app/assets/stylesheets/techjob.css
@@ -31,15 +31,18 @@
     margin-right: auto;
 }
 
+.footer{
+  padding-bottom: 2.5rem;
+  margin-left: 17vw;
+}
+
 footer {
-    /* Sticky footer */
-    /* position: relative;
-    bottom: 24px;
-    background-color: rgb(1, 22, 39); */
-    position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem;
+  position: absolute;
+    bottom: 0;
+    width: 40vw;
+    height: 2.5rem;
+    background-color: rgb(1, 22, 39);
+
 }
 
 small {
