Update game quiz functionality - add score

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -4,14 +4,19 @@
 
 <h1>Games#show</h1>
 
+<div> Current score </div>
+<div id=current_score> 0 </div>
 
-<div id="update_me"> <div>
 
 
 <ul id = question> </ul>
+<input type="checkbox" id="correct">
 <ul id = solution> </ul>
+<input type="checkbox" id="incorrect">
 <ul id = incorrect_a> </ul>
+<input type="checkbox" id="incorrect">
 <ul id = incorrect_b> </ul>
+<input type="checkbox" id="incorrect">
 <ul id = incorrect_c> </ul>
 
 
