--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,31 +1,36 @@
 <% if @current_user.present? %>
 
 <section>
-    <header>
-        <h1 class="page-title">
-            The Software Interview Game
-        </h1>
-    </header>
+    <%# 
+        Grid displaying the reception area. Images:
+            - Reception desk
+            - Clock
+            - Seat (button creates game and takes user to game/new) 
+    %>
+    <div id="reception">
+        <div id="reception-desk">
+        </div> <!-- div#reception-desk -->
+
+        <div id="clock">
+        </div> <!-- div#clock -->
+
+        <%= button_to " ", {action: "create"}, {id: "waiting-chair", title: "Play game"} %>
+    </div><!-- div.reception -->
+
     <p>
-        The late nights, exams, group projects (oh the humanity...), billions of resumes and it’s all come down to this...the interview!
-        <br />
-        <br />
-        Well, we got you fam. Apply for the job at our 100% totally legit Tech Job Corp*. At Tech Job Corp we believe in ping pong tables, pointing at post-its, lines on whiteboards and slathering your laptop in stickers. Just submit your resume below and we’ll see you at your interview.
+        Feeling nervous? Time ticking? Heart rate up? Maybe your palms are as sweaty as mum's spaghetti? Don't stress mate! You’ve made it past the HR hounds...just need to spend a little time brushing up on the old interview questions. You’ve got this!
     </p>
 </section>
 
 <section>
     <nav aria-label="Game menu" class="main-menu">
-
-
+        <%= button_to "Impatiently start interview", {action: "create"}, {class: "button button-primary"} %>
+        <%= link_to 'View our top employees', games_path, class: "button button-secondary" %>
+        <% if @current_user.games.exists?%>
+            <%= link_to 'View your Interview History', user_path(@current_user.id), class: "button button-secondary" %>
+        <%end%>
     </nav>
 </section>
 
 <% end %>
 
-<%= button_to "create new game", action: "create" %>
-<%= link_to 'View our top employees', games_path, class: "button button-secondary" %><br>
-<% if @current_user.games.exists?%>
-<%= link_to 'View your Interview History', user_path(@current_user.id), class: "button button-secondary" %>
-<%else%>
-<%end%>
