Update JS file for animating quiz

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -7,6 +7,7 @@
 <div> Current score </div>
 <div id=current_score> 0 </div>
 
+<img src="https://tjn-blog-images.s3.amazonaws.com/wp-content/uploads/2017/04/20155740/should-stop-smiling-at-work.jpg" id=animation alt="interviewer">
 
 
 <ul id = question> </ul>
@@ -22,9 +23,9 @@
 
 
 
-
-<button type="button" class = move_button id = back>Back</button>
-<button type="button" class = move_button id = next>Next</button>
+<!--
+<button type="button" class = move_button id = back>Back</button> -->
+<button type="button" class = move_button id = next>Submit</button>
 
 
 
