Update JS file for animating quiz

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -9,7 +9,7 @@
 
 <img src="https://tjn-blog-images.s3.amazonaws.com/wp-content/uploads/2017/04/20155740/should-stop-smiling-at-work.jpg" id=animation alt="interviewer">
 
-
+<ul id = answer> </ul>
 <ul id = question> </ul>
 <input type="checkbox" id="correct">
 <ul id = solution> </ul>
