--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -2,9 +2,9 @@
 
 
 
-<h1>Games#show</h1>
 
-<div> Current score </div>
+
+<h4> Current score </h4>
 <div id=current_score> 0 </div>
 
 <img src="https://piskel-imgstore-b.appspot.com/img/1db07bc5-558c-11eb-804a-3587bbd7da8a.gif" id=animation alt="interviewer">
