Prevent user from selecting multiple answers

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -6,22 +6,22 @@
     <section>
         <div>
             <label>
-                <input type="radio" id="correct" >
+                <input type="radio" id="correct" name="option">
                 <span class="label-body" id="solution">Option A</span>
             </label>
             
             <label>
-                <input type="radio" id="incorrect" >
+                <input type="radio" id="incorrect" name="option">
                 <span class="label-body" id="incorrect_b">Option B</span>
             </label>
             
             <label>
-                <input type="radio" id="incorrect" >
+                <input type="radio" id="incorrect" name="option">
                 <span class="label-body" id="incorrect_c">Option C</span>
             </label>
             
             <label>
-                <input type="radio" id="incorrect" >
+                <input type="radio" id="incorrect" name="option">
                 <span class="label-body" id="incorrect_a">Option D</span>
             </label>
         </div>
