--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -3,23 +3,26 @@
         <blockquote id="answer"></blockquote>
         <h2 id="question" class="page-title"><h2>
     </header>
+
+      <div id= timer></div>
+      
     <section>
         <div>
             <label>
                 <input type="radio" id="correct" name="option">
                 <span class="label-body" id="solution">Option A</span>
             </label>
-            
+
             <label>
                 <input type="radio" id="incorrect" name="option">
                 <span class="label-body" id="incorrect_b">Option B</span>
             </label>
-            
+
             <label>
                 <input type="radio" id="incorrect" name="option">
                 <span class="label-body" id="incorrect_c">Option C</span>
             </label>
-            
+
             <label>
                 <input type="radio" id="incorrect" name="option">
                 <span class="label-body" id="incorrect_a">Option D</span>
@@ -29,7 +32,7 @@
 
 </article>
 
-<%# 
+<%#
 
 
 
@@ -61,6 +64,7 @@
 <%# PLACEHOLDER: To view the game over page add /gameover to the end of this url %>
 
 
+
 <script>
     var game_id = <%= params[:id]%>;
 </script>
@@ -69,6 +73,8 @@
 <div id="submit_quiz">
 <%= form_with model: @game, local: true, html: { multipart: true} do |f| %>
 
+
+<%# NEED HIDDEN FIELDS FOR FOR SCORE & TIME COMPLETED!! %>
 
 <%= f.label :score %>
 <%= f.text_field :score %>
