--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -38,7 +38,7 @@
             <% if @current_user.present? && @current_user.games.present? %>
                 <%= button_to "Increase your Salary", {action: "create"}, {title: "Play again", class: "button button-primary"} %>
                 <%= button_to "Review your Previous interviews", user_path(@current_user.id), class: "button button-secondary" %>
-            <% elseif @current_user.present? %>
+            <% elsif @current_user.present? %>
                 <%= button_to "Get Hired", action: "create" %>
             <% else %>
                 <%= link_to "Apply for a job", new_user_path, class: "button button-primary", title: "Create account" %>
