--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,11 +20,11 @@
 
     <section>
         <nav aria-label="Game menu" class="main-menu">
-            <%= link_to 'Apply for Tech Job Corp', new_user_path, class: "button button-primary" %>
+            <%= link_to 'Apply for Tech Job Corp', new_user_path, class: "button button-primary", title: "Sign up" %>
 
             <%= link_to 'Login', login_path, class: "button button-secondary" %>
 
-            <%# link_to 'View our top employees', scores_path, class: "button button-secondary" %>
+            <%=link_to 'View our top employees', games_path, class: "button button-secondary", title: "See Leaderboard"%>
         </nav>
     </section>
             <p>
