--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -22,6 +22,8 @@
 
 <div id=buttons>
 <button type="button" class = move_button id = next>Next question</button>
+
+<button type='button' class = move_button id =finish >Finish Quiz</button>
 </div>
 
 
