Fixed posting issues

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -7,7 +7,7 @@
 
       <div id= timer></div>
 
-    <section>
+    <section id=questions_clear>
 ​
         <div id="optionA"></div>
         <div id="optionB"></div>
