Fixed issue with posting

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,7 +1,9 @@
 <article>
     <header>
         <div id= timer></div>
-        <blockquote id="answer"></blockquote>
+        <!-- <blockquote id="answer"></blockquote> -->
+        <img id= animation src="https://piskel-imgstore-b.appspot.com/img/4db8baeb-5628-11eb-a6a2-2f8693b953d1.gif">
+
         <h2 id="question" class="page-title"><h2>
     </header>
 
@@ -14,6 +16,7 @@
         <div id="optionC"></div>
         <div id="optionD"></div>
     </section>
+
 ​
 </article>
 
