--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,8 @@
+
+<script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
+
+
+
 <article>
   <section>
     <header>
@@ -30,7 +35,26 @@
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %>
   <br>
+
+<button id="upload_widget" class="cloudinary-button">upload profile picture</button>
+    <br>
   <%= f.submit "Let's play", :class => 'button-primary' %>
   <%= link_to 'Cancel', root_path, :class => 'button button-secondary' %>
-<% end %> 
+<% end %>
+
+
 </article>
+<script>
+  var myWidget = cloudinary.createUploadWidget({
+    cloudName: 'do9y9tnbr',
+    uploadPreset: 'kzqevlztT'}, (error, result) => {
+      if (!error && result && result.event === "success") {
+        console.log('Done! Here is the image info: ', result.info);
+      }
+    }
+  )
+
+  document.getElementById("upload_widget").addEventListener("click", function(){
+      myWidget.open();
+    }, false);
+  </script>
