--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <article>
     <header class="centering">
-        <%= image_tag 'TechCorpLogo.svg', alt: "Tech Job Corp", id: "game-logo" %>
+        <%= image_tag '/app/assets/images/TechCorpLogo.svg', alt: "Tech Job Corp", id: "game-logo" %>
     </header>
     <br/>
 
@@ -33,7 +33,7 @@
                 <%= link_to 'Apply for Tech Job Corp', new_user_path, class: "button button-primary", title: "Sign up" %>
                 <%= link_to 'Login', login_path, class: "button button-secondary" %>
             <%end%>
-            
+
             <%= link_to 'View our top employees', games_path, class: "button button-secondary", title: "See Leaderboard"%>
 
         </nav>
