fixed logo image display

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <article>
     <header class="centering">
-        <%= image_tag '/app/assets/images/TechCorpLogo.svg', alt: "Tech Job Corp", id: "game-logo" %>
+        <%= image_tag 'TechCorpLogo.svg', alt: "Tech Job Corp", id: "game-logo" %>
     </header>
     <br/>
 
