Display score under quiz questions

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -14,6 +14,8 @@
         <div id="optionC"></div>
         <div id="optionD"></div>
     </section>
+
+    <p id="current_score"></p>
 ​
 </article>
 
