removed score display on games show page

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -17,7 +17,7 @@
         <div id="optionD"></div>
     </section>
 
-    <p id="current_score"></p>
+    <!-- <p id="current_score"></p> commented out as currently doesnt save final question score -->
 ​
 </article>
 
