Profile picture is now appearing on game over page

--- a/app/views/games/gameover.html.erb
+++ b/app/views/games/gameover.html.erb
@@ -21,7 +21,8 @@
             Job Corp. Your annual salary will be <strong>$ <%=@game.score %></strong>.
         </p>
         <p>
-            Once you have signed your contract for eternal servitude, please collect your branded t-shirt, sticker and water bottle, and head to your assigned hotdesk. You now belong to us.
+            Once you have signed your contract for eternal servitude, please collect your branded t-shirt, sticker and water bottle, and head to your assigned hotdesk. You now belong to us. Please find your scurity badge below.
+           <img src="http://res.cloudinary.com/do9y9tnbr/image/upload/c_limit,h_60,w_90/v1610619481/<%= @game.user.profile_picture %>.jpg">
         </p>
         <p>
             Yours sincerly,
