--- a/app/views/games/gameover.html.erb
+++ b/app/views/games/gameover.html.erb
@@ -21,9 +21,13 @@
             Job Corp. Your annual salary will be <strong>$ <%=@game.score %></strong>.
         </p>
         <p>
-            Once you have signed your contract for eternal servitude, please collect your branded t-shirt, sticker and water bottle, and head to your assigned hotdesk. You now belong to us. Please find your scurity badge below.
-           <img src="http://res.cloudinary.com/do9y9tnbr/image/upload/c_limit,h_60,w_90/v1610619481/<%= @game.user.profile_picture %>.jpg">
-        </p>
+            Once you have signed your contract for eternal servitude, please collect your branded t-shirt, sticker and water bottle, and head to your assigned hotdesk. You now belong to us. Please find your security badge below.
+              </p>
+            <br><div id="security">
+           <div id="profile_image"> <img src="http://res.cloudinary.com/do9y9tnbr/image/upload/h_150,w_150/v1610619481/<%= @game.user.profile_picture %>.jpg" alt="profile picture"></div>
+          <div id="ID_card"> <img src="https://res.cloudinary.com/do9y9tnbr/image/upload/h_267,w_400/v1610621939/White_Blue_Photo_Simple_Security_ID_Card_qfmfpm.png" alt="Identification card"></div>
+             </div>
+
         <p>
             Yours sincerly,
             <br />
