Add animated css face

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -2,12 +2,42 @@
     <header>
         <div id= timer></div>
         <!-- <blockquote id="answer"></blockquote> -->
-        <img id= animation src="https://piskel-imgstore-b.appspot.com/img/4db8baeb-5628-11eb-a6a2-2f8693b953d1.gif">
+        <%# <img id= animation src="https://piskel-imgstore-b.appspot.com/img/4db8baeb-5628-11eb-a6a2-2f8693b953d1.gif"> %>
+
+<%# Face animation - WIP (Manda) - refer to face.css %>
+<div class="scale-down">
+<div class="face-centering">
+  <div id="face">
+    <div id="ears">
+      <div class="ear"></div>
+      <div class="ear"></div>
+    </div>
+    <div id="hair"></div>
+    <div id="eyes">
+      <div class="eye"></div>
+      <div class="eye"></div>
+    </div>
+    <div id="nose"></div>
+    <div id="cheeks">
+      <div class="cheek"></div>
+      <div class="cheek"></div>
+    </div>
+    <div id="animated-lips">
+      <div id="animated-inner-lips"></div>
+    </div>
+  </div>
+</div>
+</div>
 
         <h2 id="question" class="page-title"><h2>
     </header>
 
       <div id= timer></div>
+
+
+
+
+
 
     <section id=questions_clear>
 ​
