Salary function has been fixed

--- a/app/views/games/gameover.html.erb
+++ b/app/views/games/gameover.html.erb
@@ -18,7 +18,7 @@
         </p>
         <p>
             We are pleased to make you an offer of employment at Tech
-            Job Corp. Your annual salary will be <strong>$ <%=@game.score %></strong>.
+            Job Corp. Your annual salary will be <strong>$ <%=@game.salary %></strong>.
         </p>
         <p>
             Once you have signed your contract for eternal servitude, please collect your branded t-shirt, sticker and water bottle, and head to your assigned hotdesk. You now belong to us. Please find your security badge below.
