--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -41,10 +41,10 @@
 
     <section id=questions_clear>
 ​
-        <div id="optionA"></div>
-        <div id="optionB"></div>
-        <div id="optionC"></div>
-        <div id="optionD"></div>
+        <div id="optionA" class="incorrect"></div>
+        <div id="optionB" class="incorrect"></div>
+        <div id="optionC" class="incorrect"></div>
+        <div id="optionD" class="incorrect"></div>
     </section>
 
     <!-- <p id="current_score"></p> commented out as currently doesnt save final question score -->
