--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,3 +23,18 @@
   height: 500px;
   width: auto;
 }
+
+
+
+#timer {
+    font-family: 'Inconsolata', monospace;
+    margin:20px auto;
+		background: #34495e;
+    width:100px;
+    height:35px;
+    border-radius:7.5px;
+    color:#ecf0f1;
+    text-align:center;
+    line-height:35px;
+    font-size:20px
+}
