updated upload button color

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -36,7 +36,7 @@
   <%= f.password_field :password_confirmation %>
   <br>
   <input type="hidden" name="user[profile_picture]" value="" id="profile_picture">
-  <button id="upload_widget" class="cloudinary-button">upload profile picture</button>
+  <button id="upload_widget" class="button-primary">upload profile picture</button>
     <br>
   <%= f.submit "Let's play", :class => 'button-primary' %><br />
   <%= link_to 'Cancel', root_path, class: 'button button-secondary', title: "Home" %>
