--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,13 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
-        <%= favicon_link_tag asset_path('techcorp-favicon.svg') %>
+    <%= favicon_link_tag asset_path('techcorp-favicon.svg') %>
   </head>
 
   <body>
     <div class="container">
       <header>
-        <nav aria-label="Account menu">
+        <nav aria-label="Account menu" class="app-nav">
           <ul>
           <% if @current_user.present? %>
             <li id="greeting-user">
