made logo return you to homepage

--- a/app/views/games/gameover.html.erb
+++ b/app/views/games/gameover.html.erb
@@ -1,7 +1,7 @@
 <article>
     <% if @current_user.present? %>
     <header class="centering">
-        <%= image_tag 'TechCorpLogo.svg', alt: "Tech Job Corp", id: "game-logo" %>
+        <a href = '/'><%= image_tag 'TechCorpLogo.svg', alt: "Tech Job Corp", id: "game-logo" %></a>
     </header>
     <br/>
     <section>
