--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Welcome <%= @current_user.username%></h1>
-<%= link_to "Return to Home Page", new_game_path %>
+<a href = '/'><%= image_tag 'TechCorpLogo.svg', alt: "Tech Job Corp", id: "game-logo" %></a>
 <p>Your Score History</p>
 
 <!-- Table containing top unique salaries (Note: User only appears <= 1) -->
