--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,6 +1,6 @@
 <article>
     <header class="centering">
-        <%= image_tag 'TechCorpLogo.svg', alt: "Tech Job Corp", id: "game-logo" %>
+        <a href = '/'><%= image_tag 'TechCorpLogo.svg', alt: "Tech Job Corp", id: "game-logo" %></a>
     </header>
     <br/>
     <section>
