commented out game time

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
         <tr>
             <th>Game</th>
             <th>Date of Interview</th>
-            <th>Length of Interview</th>
+            <!-- <th>Length of Interview</th> feature to be added -->
             <th>Score</th>
             <th>Salary</th>
         </tr>
