Add shirt to interviewer

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -29,12 +29,15 @@
     </div><!-- div#animated-lips -->
 
   </div> <!-- div#face -->
+  <div id="shirt"></div>
 </div> <!-- div.face-centering -->
 </div> <!-- div.scale-down -->
-
-<%# Countdown timer refer to timer.css %>
 <div id= timer></div>
+<div class="spacer"></div>
+<%# Countdown timer refer to timer.css %>
 
+
+<div class="spacer"></div>
 
         <h2 id="question" class="page-title"><h2>
     </header>
