--- a/app/assets/stylesheets/face.css
+++ b/app/assets/stylesheets/face.css
@@ -88,6 +88,21 @@
     margin-bottom: 4px;
 }
 
+#shirt {
+    background: #6A2849;
+    background-image:  url(Checkered.svg);
+    background-size: 20%;
+    background-repeat: repeat;
+    border-radius: 50% 50% 25% 25%;
+    height: 200px;
+    width: 220px;
+    border: 4px solid #6A2849;
+    position: relative;
+    left: -210px;
+    bottom: -160px;
+    z-index: -6;
+  }
+
 
 #animated-lips {
     z-index: -1;
