--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -32,10 +32,10 @@
   <div id="shirt"></div>
 </div> <!-- div.face-centering -->
 </div> <!-- div.scale-down -->
-<div id= timer></div>
-<div class="spacer"></div>
-<%# Countdown timer refer to timer.css %>
 
+<%# Countdown timer refer to timer.css %>
+<div id="timer"></div>
+<div class="spacer"></div>
 
 <div class="spacer"></div>
 
