--- a/app/assets/stylesheets/timer.css
+++ b/app/assets/stylesheets/timer.css
@@ -1,6 +1,6 @@
 #timer {
     font-family: 'Inconsolata', monospace;
-    margin:20px auto;
+    /* margin:20px auto; */
 		background: #34495e;
     width:90px;
     height:35px;
@@ -8,5 +8,5 @@
     color:#ecf0f1;
     text-align:center;
     line-height:35px;
-    font-size:20px
+    font-size:24px;
 }
